--- a/.github/workflows/master_projet7test.yml
+++ b/.github/workflows/master_projet7test.yml
@@ -29,9 +29,12 @@ jobs:
       
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      # Ajoutez cette étape pour exécuter vos tests unitaires
+      - name: Run unit tests
+        run: |
+          pytest
         
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
         with:
@@ -39,7 +42,6 @@ jobs:
           path: |
             . 
             !venv/
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
